tests/regression/errors/basic/type_error_9.csd
// Type error test 9
sus number drip = 9
sus text tea = "string_9"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 9:", wrong)
